[package]
name = "net"
version = "0.1.0"
authors = ["zhuyadong"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mio = {version = "0.7.9", features = ["os-poll", "net"]}
pnet = "0.27.2"
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"
serde_yaml = "0.8.17"
trust-dns-proto = "0.19.7"
trust-dns-resolver = "0.19.7"
